--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-download-link": "^2.3.0",
     "react-helmet": "^6.0.0",
     "react-icons": "^3.10.0",
+    "react-iframe": "^1.8.0",
     "react-markdown": "^4.3.1"
   },
   "devDependencies": {
